# Payment-System

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  api-docs.yml  data.db
migrations/: 20230517000000_init.sql  20250523000000_schema.sql
src/: error.rs  lib.rs  main.rs
src/db/: common.rs  connection.rs  cross_border.rs  error.rs  mod.rs  schema.rs  transaction.rs
src/handlers/: auth.rs  transaction.rs  user.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs
src/models/: mod.rs  transaction.rs  user.rs
src/services/: compliance.rs  exchange_rate.rs  mod.rs  transaction.rs
src/utils/: currency_mapping.rs  mod.rs  retry.rs
tests/: auth_tests.rs  retry_tests.rs  transaction_tests.rs  user_tests.rs
