[package]
name = "payment_system"
version = "0.1.0"
edition = "2021"

[lib]
name = "payment_system"
path = "src/lib.rs"

[[bin]]
name = "payment_system"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = { version = "0.6", features = ["headers"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.4", features = ["trace", "cors", "auth", "limit"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3"
bcrypt = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
